--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,53 +1,91 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela&display=swap');
+
+h1, h2, h3, h4, input, label{
+  font-family: 'Varela';
+}
+
+html, .App{
+  background-color: #1c2224;
+}
+
 .max-width{
   width: 100%;
 }
 .flex-container{
   display:flex;
 }
+
 #app{
   margin:20px;
   margin-left:35px;
 }
+
+#users{
+  overflow-y: auto;
+  overflow-x: hidden; 
+  
+}
 .userList{
   display:flex;
   flex-direction: column;
-  overflow-y: auto;
   overflow-x: hidden;
-  width: 20vw;
+  width: 15vw;
   border-top-right-radius: 1em;
 }
 
 #userlist-title{
-  background-color: rgb(196, 69, 69);
+  line-height: 30px;
+  /* background-color: #2d6885; */
+  background-color: #752c2c;;
   padding-top:10px;
   color:white;
   box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
   margin-bottom: 15px;
+  /* needed for centering */
+  height: 6vh;
+  
 }
 
 .userList-container{
   display:flex;
-  height:85vh;
-  /* padding-left:10px; */
-  margin-left:15px;
+  height:86vh;
   box-shadow: 2px 0px 10px 1px rgba(0,0,0,0.75);
   border-top-right-radius: 1em;
-  border-bottom-right-radius: 1em;
+  /* border-bottom-right-radius: 1em; */
+  /* background: linear-gradient(to top, #11151d 23%, #491362 100%); */
+  /* background-color: #254455; */
+  background-color: #254455;
 }
 
-.messageBox-container{
-  display:flex;
-  height:85vh;
+
+#messages{
   flex-grow: 1;
-  overflow-y: auto;
-  height:85vh;
+  height:80vh;
   padding:10px;
   /* border:1px solid black; */
-  box-shadow: -2px 0px 10px 1px rgba(0,0,0,0.75);
+  box-shadow: -2px 4px 10px 1px rgba(0,0,0,0.75);
   border-top-left-radius: 1em;
   border-bottom-left-radius: 1em;
 }
+.messageBox-container{
+  border-top-left-radius: 1em;
+  background-image: linear-gradient( rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65) ),  url("../resources/img/chat-wallpaper.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display:flex;
+}
 
+.messageBox-container-header{
+  display:flex;
+  /* flex-grow: 1; */
+  padding: 1em;
+  border-top-left-radius: 1em;
+  height:6vh;
+  /* background-color: rgb(196, 69, 69); */
+  /* background-color: #2d6885; */
+  background-color: #752c2c;
+  color:white
+}
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -62,16 +100,20 @@
   border-radius: 1em;
   border: solid 1px transparent;
 }
+
+
 .ownMessage{
   align-self:flex-end;
   display: flex;
   padding: 10px 10px 0px 10px;
   background-color:rgb(49, 40, 126);
+  /* background-color: 	#127067; */
   border-radius: 10px;
   width: auto;
-  max-width: 400px;
-  min-width: 120px;
+  max-width: 20vw;
+  min-width: 6vw;
   margin-bottom: 5px;
+  box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.3);
 }
 
 .message{
@@ -81,9 +123,10 @@
   background-color: rgb(161, 72, 72);
   border-radius: 10px;
   width: auto;
-  max-width: 400px;
-  min-width: 120px;
+  max-width: 20vw;
+  min-width: 6vw;
   margin-bottom: 5px;
+  box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.3);
 }
 
 .messageText{
@@ -93,7 +136,14 @@
   white-space: pre-line;
 }
 
+#messages{
+  display: block;
+  overflow-y: auto;
+  position: relative;
+  flex-grow: 1;
+}
 #msgInput{
+  border-radius: 5em;
   flex-grow: 1;
   margin-top:20px;
   margin-right:10px;
@@ -104,13 +154,15 @@
 
 .btn{
   box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
+  font-family: 'Varela';
 }
+
 .username{
   color: white;
   margin-top:-5px;
 }
 .userlist-username{
-  color:black;
+  color:white;
   padding-left:15px;
 }
 .timeStamp{
@@ -143,9 +195,9 @@
   justify-self: flex-end;
   justify-items: flex-end;
 }
-
 .center{
   justify-content: center;
+  align-content: center;
 }
 
 .wrap{
@@ -154,4 +206,11 @@
 
 .avatar{
   width:20px;
+}
+
+#exit-btn{
+  width: 30px;
+  cursor: pointer;
+  height:40px;
+  margin-left:20px;
 }
