--- a/live-chat/src/styles/globals.css
+++ b/live-chat/src/styles/globals.css
@@ -1,107 +1,243 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@import url('https://fonts.googleapis.com/css2?family=Varela&display=swap');
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-html,
-body {
-  max-width: 100vw;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+h1, h2, h3, h4, input, label{
+  font-family: 'Varela';
+}
+
+html, .App{
+  background-color: #1c2224;
+}
+
+.max-width{
+  width: 100%;
+}
+.flex-container{
+  display:flex;
+}
+
+#app{
+  margin:20px;
+  margin-left:35px;
+}
+
+#users{
+  overflow-y: auto;
+  overflow-x: hidden; 
+  
+}
+.userList{
+  display:flex;
+  flex-direction: column;
   overflow-x: hidden;
+  width: 15vw;
+  border-top-right-radius: 1em;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+#userlist-title{
+  line-height: 30px;
+  /* background-color: #2d6885; */
+  background-color: #752c2c;;
+  padding-top:10px;
+  color:white;
+  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
+  margin-bottom: 15px;
+  /* needed for centering */
+  height: 6vh;
+  
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.userList-container{
+  display:flex;
+  height:86vh;
+  box-shadow: 2px 0px 10px 1px rgba(0,0,0,0.75);
+  border-top-right-radius: 1em;
+  /* border-bottom-right-radius: 1em; */
+  /* background: linear-gradient(to top, #11151d 23%, #491362 100%); */
+  /* background-color: #254455; */
+  background-color: #254455;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+
+#messages{
+  flex-grow: 1;
+  height:80vh;
+  padding:10px;
+  /* border:1px solid black; */
+  box-shadow: -2px 4px 10px 1px rgba(0,0,0,0.75);
+  border-top-left-radius: 1em;
+  border-bottom-left-radius: 1em;
+}
+.messageBox-container{
+  border-top-left-radius: 1em;
+  background-image: linear-gradient( rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65) ),  url("/public/resources/img/chat-wallpaper.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display:flex;
+}
+
+.messageBox-container-header{
+  display:flex;
+  /* flex-grow: 1; */
+  padding: 1em;
+  border-top-left-radius: 1em;
+  height:6vh;
+  /* background-color: rgb(196, 69, 69); */
+  /* background-color: #2d6885; */
+  background-color: #752c2c;
+  color:white
+}
+#messages::-webkit-scrollbar {
+  width: 10px;
+}
+
+#messages::-webkit-scrollbar-track {
+  box-shadow: 0px 0px 10px 10px transparent;
+  border: solid 1px transparent;
+}
+
+#messages::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 20px 10px rgb(71, 65, 65);
+  border-radius: 1em;
+  border: solid 1px transparent;
+}
+
+
+.ownMessage{
+  align-self:flex-end;
+  display: flex;
+  padding: 10px 10px 0px 10px;
+  background-color:rgb(49, 40, 126);
+  /* background-color: 	#127067; */
+  border-radius: 10px;
+  width: auto;
+  max-width: 20vw;
+  min-width: 6vw;
+  margin-bottom: 5px;
+  box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.3);
+}
+
+.message{
+  display:flex;
+  align-self:flex-start;
+  padding: 10px 10px 0px 10px;
+  background-color: rgb(161, 72, 72);
+  border-radius: 10px;
+  width: auto;
+  max-width: 20vw;
+  min-width: 6vw;
+  margin-bottom: 5px;
+  box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.3);
+}
+
+.messageText{
+  color:white;
+  padding-left:10px;
+  word-break: break-all;
+  text-overflow: clip;
+  white-space: pre-line;
+}
+
+#messages{
+  display: block;
+  overflow-y: auto;
+  position: relative;
+  flex-grow: 1;
+}
+#msgInput{
+  /* border-radius: 5em; */
+  border-top-left-radius: 5em;
+  border-bottom-left-radius: 5em;
+  flex-grow: 1;
+  margin-top:20px;
+  margin-right:10px;
+  box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
+  resize: none;
+  max-height: 120px;
+}
+
+.btn{
+  box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
+  font-family: 'Varela';
+}
+
+.username{
+  color: white;
+  margin-top:-5px;
+}
+.userlist-username{
+  color:white;
+  padding-left:15px;
+  word-break: break-all;
+}
+.timeStamp{
+  color:rgb(190, 190, 190);
+  justify-content: flex-end;
+  margin-top:-20px;
+  margin-bottom: 5px;
+}
+.whiteTxt{
+  color:white;
+}
+.col{
+  display: flex;
+  flex-direction: column;
+}
+
+.row{
+  display: flex;
+  flex-direction: row;
+}
+
+.left{
+  justify-content: flex-start;
+  justify-self: flex-start;
+  justify-items: flex-start;
+}
+
+.right{
+  justify-content: flex-end;
+  justify-self: flex-end;
+  justify-items: flex-end;
+}
+.center{
+  justify-content: center;
+  align-content: center;
+}
+
+.wrap{
+  flex-wrap: wrap;
+}
+
+.avatar{
+  width:20px;
+}
+
+#emoji-btn{
+  max-width: 40px;
+}
+
+.emojiPicker{
+  position: absolute;
+  bottom:5vh;
+  right:1vw;
+}
+#exit-btn{
+  width: 30px;
+  cursor: pointer;
+  height:40px;
+  margin-left:20px;
 }
